修改遊戲選項為兩個

--- a/index.html
+++ b/index.html
@@ -108,8 +108,7 @@
           <span class="input-group-text">遊戲方式</span>
           <select id="gametype" >
             <option value="1">金球99</option>
-            <option value="2">金神氣</option>
-            <option value="3">金大樂</option>
+            <option value="2">金神氣 / 金大樂</option>
           </select>
       </div>
       <div class="col-12 mt-3">
