--- a/index.html
+++ b/index.html
@@ -50,23 +50,23 @@
       輸出：6360141390
       */
       let code = "";
-      let tmp = (d.getSeconds() + parseInt(phone[2])) + parseInt(phone[3]));
+      let tmp = d.getSeconds() + parseInt(phone[2]) + parseInt(phone[3]);
       code += (tmp > 10) ? tmp : '0' + tmp;
       if($("#gametype").val() == "1") {
         //金球99
-        tmp = (d.getDate() + parseInt(phone[4])) + parseInt(phone[5]));
+        tmp = d.getDate() + parseInt(phone[4]) + parseInt(phone[5]);
         code += (tmp > 10) ? tmp : '0' + tmp;
-        tmp = (d.getMinutes() + parseInt(phone[6])) + parseInt(phone[7]));
+        tmp = d.getMinutes() + parseInt(phone[6]) + parseInt(phone[7]);
         code += (tmp > 10) ? tmp : '0' + tmp;
-        tmp = (d.getHours() + parseInt(phone[8]) + parseInt(phone[9]));
+        tmp = d.getHours() + parseInt(phone[8]) + parseInt(phone[9]);
         code += (tmp > 10) ? tmp : '0' + tmp;
       } else {
         //其餘兩項
-        tmp = (d.getMinutes() + parseInt(phone[4])) + parseInt(phone[5]));
+        tmp = d.getMinutes() + parseInt(phone[4]) + parseInt(phone[5]);
         code += (tmp > 10) ? tmp : '0' + tmp;
-        tmp = (d.getDate() + parseInt(phone[6])) + parseInt(phone[7]));
+        tmp = d.getDate() + parseInt(phone[6]) + parseInt(phone[7]);
         code += (tmp > 10) ? tmp : '0' + tmp;
-        tmp = (d.getHours() + parseInt(phone[8]) + parseInt(phone[9]));
+        tmp = d.getHours() + parseInt(phone[8]) + parseInt(phone[9]);
         code += (tmp > 10) ? tmp : '0' + tmp;
       }
       $("#checkcode").html("確認碼：" + code);
