修正測試時間寫死

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         return;
       }
       let d = new Date($.now());
-      d = new Date("2023/07/18 19:34:34");
+      //d = new Date("2023/07/18 19:34:34");
       console.log(d);
       if("產生時間：" + d.toLocaleString('zh-TW') == $("#datetime").html()) {
         $("#checkcode").html("重複產生");
